# fanboard

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: App.c  App.h  AppDomains.h  Board.c  Board.h  CRC.c  CRC.h  DB.c  DB.h  Event.c  FanControl.h  HTTP.c  HTTP.h  HTTPServer.c  HTTPServer.h  Main.c  NWPEvent.c  NWPEvent.h  OTA.c  OTA.h  Syscalls.c  UART.c  UART.h  UARTTask.c  UARTTask.h  Utilities.c  Utilities.h  Version.h
cmake/: arm-clang-toolchain.cmake  arm-gcc-toolchain.cmake  clang-arm-gcc-toolchain.cmake
linker/: cc32xxsf_freertos.lds
port/FreeRTOS-Kernel/: patch.diff
port/FreeRTOS-Kernel/include/: FreeRTOSConfig.h  FreeRTOSTraceConfig.h
port/HomeKitADK/PAL/CC32xxSF/: HAPPlatform+Init.h  HAPPlatform.c  HAPPlatformAbort.c  HAPPlatformAccessorySetup+Init.h  HAPPlatformAccessorySetup.c  HAPPlatformClock.c  HAPPlatformFileHandle.h  HAPPlatformKeyValueStore+Init.h  HAPPlatformKeyValueStore+SDKDomains.h  HAPPlatformKeyValueStore.c  HAPPlatformLog+Init.h  HAPPlatformLog.c  HAPPlatformMFiTokenAuth+Init.h  HAPPlatformMFiTokenAuth.c  HAPPlatformOTA+Init.h  HAPPlatformOTA.c  HAPPlatformRandomNumber.c  HAPPlatformRunLoop+Init.h  HAPPlatformRunLoop.c  HAPPlatformServiceDiscovery.c  HAPPlatformSyslog+Init.h  HAPPlatformSyslog.c  HAPPlatformTCPStreamManager+Init.h  HAPPlatformTCPStreamManager.c  HAPPlatformTimer+Init.h  HAPPlatformTimer.c
port/SEGGER/SYSVIEW/: SEGGER_SYSVIEW_Config_FreeRTOS.c
port/mbedtls/: README
port/mbedtls/include/mbedtls/: config.h
startup/: startup_cc32xx.c  startup_cc32xx_gcc.c
svd/: CC32xxSF.svd
tools/: sign_image.sh
